[gd_scene load_steps=7 format=3 uid="uid://c462arklhm516"]

[ext_resource type="Script" path="res://script/npc/musuh_1.gd" id="1_mcjnk"]

[sub_resource type="BoxShape3D" id="BoxShape3D_1on4x"]
size = Vector3(1.25, 1.25, 3)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_geum8"]
albedo_color = Color(0.933333, 0.243137, 0.172549, 1)

[sub_resource type="BoxMesh" id="BoxMesh_23fam"]
size = Vector3(1.25, 1.25, 3)

[sub_resource type="SphereShape3D" id="SphereShape3D_rcdu4"]
radius = 20.0

[sub_resource type="BoxShape3D" id="BoxShape3D_vhdie"]
size = Vector3(1.4, 1.4, 3.1)

[node name="Musuh1" type="CharacterBody3D"]
collision_layer = 8
collision_mask = 5
script = ExtResource("1_mcjnk")

[node name="Colls" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_1on4x")

[node name="Mesh" type="MeshInstance3D" parent="."]
material_override = SubResource("StandardMaterial3D_geum8")
mesh = SubResource("BoxMesh_23fam")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="Colls" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_rcdu4")

[node name="Hit" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="Colls" type="CollisionShape3D" parent="Hit"]
shape = SubResource("BoxShape3D_vhdie")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
[connection signal="body_entered" from="Hit" to="." method="tabrak"]
